<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_parent_dashboard"
        android:icon="@android:drawable/ic_menu_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_app_locker"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_apps" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_requests" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
